Refactor TipoProdutoService to replace Collectors.toList() with Stream.toList()